[gd_scene format=3 uid="uid://do0pqol4us85c"]

[ext_resource type="Script" uid="uid://w8bdqfecxcnf" path="res://scenes/ui/esc_menu.gd" id="1_1apln"]
[ext_resource type="Texture2D" uid="uid://dd08wxj3sc24g" path="res://assets/textures/ui/vignette.png" id="2_wvp1r"]
[ext_resource type="Theme" uid="uid://j8ln4077rpnx" path="res://resources/theme/main_ui.tres" id="3_3axht"]
[ext_resource type="Script" uid="uid://dfkfj4hao1ksh" path="res://scenes/ui/menu/animated_check_button.gd" id="4_3axht"]
[ext_resource type="Texture2D" uid="uid://ddxmune0eguag" path="res://assets/textures/ui/dialogue.png" id="5_0us07"]
[ext_resource type="Texture2D" uid="uid://dasmrdgn8oc51" path="res://assets/textures/ui/audioOn.png" id="6_8dnxo"]
[ext_resource type="Texture2D" uid="uid://dgkbonw3xi7m6" path="res://assets/textures/ui/musicOn.png" id="7_crh4y"]
[ext_resource type="PackedScene" uid="uid://bnft0ws15mkb1" path="res://scenes/ui/menu/animated_button.tscn" id="8_nf7rg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k0wdl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0nq0b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sfjrn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1y3t0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l0v51"]

[sub_resource type="Theme" id="Theme_l0v51"]
Button/styles/disabled = SubResource("StyleBoxEmpty_k0wdl")
Button/styles/focus = SubResource("StyleBoxEmpty_0nq0b")
Button/styles/hover = SubResource("StyleBoxEmpty_sfjrn")
Button/styles/normal = SubResource("StyleBoxEmpty_1y3t0")
Button/styles/pressed = SubResource("StyleBoxEmpty_l0v51")

[node name="EscMenu" type="CanvasLayer" unique_id=2041106339]
process_mode = 3
layer = 999
visible = false
script = ExtResource("1_1apln")

[node name="UIRoot" type="Control" parent="." unique_id=2048664900]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Vignette" type="TextureRect" parent="UIRoot" unique_id=1948477533]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.64705884)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wvp1r")
expand_mode = 1

[node name="EscMenu" type="VBoxContainer" parent="UIRoot" unique_id=1668135373]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.5
offset_top = -304.0
offset_right = 193.5
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("3_3axht")

[node name="ButtonsVbox" type="VBoxContainer" parent="UIRoot/EscMenu" unique_id=540358293]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Fullscreen" type="CheckBox" parent="UIRoot/EscMenu/ButtonsVbox" unique_id=1726010649]
unique_name_in_owner = true
custom_minimum_size = Vector2(387, 50)
layout_mode = 2
focus_neighbor_bottom = NodePath("../SoundsTextureRect/SoundsMargin/SoundsHBox/SoundsSlider")
focus_next = NodePath("../SoundsTextureRect/SoundsMargin/SoundsHBox/SoundsSlider")
text = "Tela Inteira"
alignment = 1
script = ExtResource("4_3axht")
rot_range = 5.0
metadata/_custom_type_script = "uid://dfkfj4hao1ksh"

[node name="SoundsTextureRect" type="TextureRect" parent="UIRoot/EscMenu/ButtonsVbox" unique_id=1709909565]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture = ExtResource("5_0us07")
expand_mode = 1

[node name="SoundsMargin" type="MarginContainer" parent="UIRoot/EscMenu/ButtonsVbox/SoundsTextureRect" unique_id=1575427655]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 60

[node name="SoundsHBox" type="HBoxContainer" parent="UIRoot/EscMenu/ButtonsVbox/SoundsTextureRect/SoundsMargin" unique_id=1109145715]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="SoundsIcon" type="TextureRect" parent="UIRoot/EscMenu/ButtonsVbox/SoundsTextureRect/SoundsMargin/SoundsHBox" unique_id=1569935777]
modulate = Color(0.27058825, 0.13333334, 0, 1)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = SubResource("Theme_l0v51")
texture = ExtResource("6_8dnxo")
expand_mode = 1
stretch_mode = 5

[node name="SoundsSlider" type="HSlider" parent="UIRoot/EscMenu/ButtonsVbox/SoundsTextureRect/SoundsMargin/SoundsHBox" unique_id=67474982]
unique_name_in_owner = true
modulate = Color(1, 0.35000002, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 6.0
focus_neighbor_top = NodePath("../../../../Fullscreen")
focus_neighbor_bottom = NodePath("../../../../MusicTextureRect/MusicMargin/MusicHBox/MusicSlider")
focus_next = NodePath("../../../../MusicTextureRect/MusicMargin/MusicHBox/MusicSlider")
focus_previous = NodePath("../../../../Fullscreen")
max_value = 1.0
step = 0.05
value = 0.5

[node name="MusicTextureRect" type="TextureRect" parent="UIRoot/EscMenu/ButtonsVbox" unique_id=1898103191]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture = ExtResource("5_0us07")
expand_mode = 1

[node name="MusicMargin" type="MarginContainer" parent="UIRoot/EscMenu/ButtonsVbox/MusicTextureRect" unique_id=1758063756]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 60

[node name="MusicHBox" type="HBoxContainer" parent="UIRoot/EscMenu/ButtonsVbox/MusicTextureRect/MusicMargin" unique_id=1914252826]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="MusicIcon" type="TextureRect" parent="UIRoot/EscMenu/ButtonsVbox/MusicTextureRect/MusicMargin/MusicHBox" unique_id=505340593]
modulate = Color(0.27058825, 0.13333334, 0, 1)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = SubResource("Theme_l0v51")
texture = ExtResource("7_crh4y")
expand_mode = 1
stretch_mode = 5

[node name="MusicSlider" type="HSlider" parent="UIRoot/EscMenu/ButtonsVbox/MusicTextureRect/MusicMargin/MusicHBox" unique_id=245286721]
unique_name_in_owner = true
modulate = Color(1, 0.35000002, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../../../SoundsTextureRect/SoundsMargin/SoundsHBox/SoundsSlider")
focus_neighbor_bottom = NodePath("../../../../BackButton")
focus_next = NodePath("../../../../BackButton")
focus_previous = NodePath("../../../../SoundsTextureRect/SoundsMargin/SoundsHBox/SoundsSlider")
max_value = 1.0
step = 0.05
value = 0.5

[node name="BackButton" parent="UIRoot/EscMenu/ButtonsVbox" unique_id=2065398685 instance=ExtResource("8_nf7rg")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../MusicTextureRect/MusicMargin/MusicHBox/MusicSlider")
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../MusicTextureRect/MusicMargin/MusicHBox/MusicSlider")
label = "Voltar"
burn_on_press = false

[node name="ExitButton" parent="UIRoot/EscMenu/ButtonsVbox" unique_id=1447173936 instance=ExtResource("8_nf7rg")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../BackButton")
focus_previous = NodePath("../BackButton")
label = "Exit"

[connection signal="toggled" from="UIRoot/EscMenu/ButtonsVbox/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="UIRoot/EscMenu/ButtonsVbox/SoundsTextureRect/SoundsMargin/SoundsHBox/SoundsSlider" to="." method="_on_sounds_slider_value_changed"]
[connection signal="value_changed" from="UIRoot/EscMenu/ButtonsVbox/MusicTextureRect/MusicMargin/MusicHBox/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="UIRoot/EscMenu/ButtonsVbox/BackButton" to="." method="close_menu"]
[connection signal="pressed" from="UIRoot/EscMenu/ButtonsVbox/ExitButton" to="." method="quit" flags=18]
